Made a context for components to communicate with. Fixed dark mode issue (some things not changing color). Username is now displayed on personal page when logged in. Dark/light mode can now be stored in database as long as user is logged in. Made other little adjustments. You can look at code changes.

--- a/tackle-app-src/src/App.css
+++ b/tackle-app-src/src/App.css
@@ -7,17 +7,37 @@ body {
 	margin: 0;
 }
 
-.modal-overlay {
+.modal-overlay-light {
 	position: fixed;
     inset: 0;
 	height: 100%;
     background-color: rgba(255, 255, 255, 0.75);
 }
-.modal {
+
+.modal-overlay-dark {
+	position: fixed;
+    inset: 0;
+	height: 100%;
+    background-color: rgba(0, 0, 0, 0.75);
+}
+
+.modal-light {
 	position: absolute;
 	inset: 40px;
 	border: 1px solid #ccc;
 	background: #fff;
+	overflow: auto;
+	-webkit-overflow-scrolling: touch;
+	border-radius: 4px;
+	outline: none;
+	padding: 20px;
+}
+
+.modal-dark {
+	position: absolute;
+	inset: 40px;
+	border: 1px solid black;
+	background: black;
 	overflow: auto;
 	-webkit-overflow-scrolling: touch;
 	border-radius: 4px;
@@ -46,9 +66,9 @@ body {
 	font-weight: bolder;
 }
 
-.dark-mode{
+.dark-mode-body{
 	background-color: rgb(0, 0, 0);
-	color: rgb(244, 229, 229);;
+	color: white;
 }
 
 /*Navigation styles*/
@@ -270,7 +290,6 @@ body {
 	margin: 0 auto;
 	inset: 10px;
 	text-align: center;
-
 	width: fit-content;
 	min-width: min(500px, 80vw);
 	height: fit-content;
@@ -336,6 +355,7 @@ body {
 .info {
 	font-size: 10pt;
 	line-height: 0.2;
+	color: black;
 }
 
 .error {
